tests/paczka2/big_fuzzy/92303139.err
Error in line 1: 09YcSaj S137 15,5
Error in line 12: A119 S137 -3,7
Error in line 8: A119 S137 75,5
Error in line 17: z0Gsn4 A119 67,9
Error in line 23: z0Gsn4 S137 91,3
Error in line 22: A119 S34 94,4
Error in line 7: p5WZF9 S137 94,2
Error in line 26: A119 S137 44,3
Error in line 25: z0Gsn4 S34 12,2
Error in line 36: z0Gsn4 S2 87,1
Error in line 59: z0Gsn4 S34 98,8
Error in line 60: vYkw S34 20,8
Error in line 63: vYkw S137 12,1
Error in line 66: A119 S2 12,3
Error in line 77: I3ljmEbMQOU S34 2,4
Error in line 83: p5WZF9 S34 34,1
Error in line 79: I3ljmEbMQOU S137 24,3
Error in line 103: 09YcSaj S34 36,0
Error in line 107: 09YcSaj S137 2,6
Error in line 127: p5WZF9 S34 97,1
Error in line 102: vYkw S137 24,3
Error in line 131: A119 A119 13,9
Error in line 136: 4zP S137 55,1
Error in line 145: z0Gsn4 A119 68,1
Error in line 154: 4zP A119 -1,7
Error in line 158: p5WZF9 S137 30,9
Error in line 159: p5WZF9 S34 11,8
Error in line 162: p5WZF9 S2 63,3
Error in line 169: z0Gsn4 A119 120,15
Error in line 170: 09YcSaj A119 83,89
Error in line 157: vYkw S34 21,1
Error in line 171: 09YcSaj A119 300,4
Error in line 179: I3ljmEbMQOU S137 59,0
Error in line 180: I3ljmEbMQOU A119 50,9
Error in line 181: I3ljmEbMQOU S137 97,3
Error in line 168: 4zP S2 79,3
Error in line 186: 09YcSaj S34 389,19
Error in line 164: p5WZF9 S34 29,5
Error in line 177: 09YcSaj S34 94,4
Error in line 191: z0Gsn4 A119 13,3
Error in line 193: z0Gsn4 S34 52,3
Error in line 198: 09YcSaj A119 97,33
Error in line 201: A119 S137 0,04
Error in line 194: 4zP A119 220,2
Error in line 207: z0Gsn4 S2 3,4
Error in line 216: z0Gsn4 E137 235,7
Error in line 215: A119 A119 69,2
Error in line 224: 4zP S34 76,0
Error in line 225: 4zP S2 81,5
Error in line 214: z0Gsn4 S137 51,8
Error in line 229: 09YcSaj S34 85,0
Error in line 227: 4zP S137 46,1
